--- a/frontend/components/comments/messageComments.template.pug
+++ b/frontend/components/comments/messageComments.template.pug
@@ -25,7 +25,7 @@
               section.row.message-holder
                 span.attachment.button.col-xs-1.fa-paperclip.fa.col-xs-offset-11
               section.row.center-xs.center-xs
-                textarea.col-xs-11.user-message
+                textarea.col-xs-11.user-message(ng-model="$ctrl.myComment")
               |                         
               section.row
                 section.button.comment-button.col-xs-4.col-xs-offset-4(ng-click="$ctrl.sendComment()") Comment
