--- a/frontend/components/reports/reportsStyle.styl
+++ b/frontend/components/reports/reportsStyle.styl
@@ -71,6 +71,7 @@
                  font-size 20px
             .item-value
                  font-family "Open Sans"
+                 flex-wrap wrap
             .item-row
                 margin-bottom 2%
     .generate-holder
