--- a/frontend/components/calendar/calendarMonth/calendarMonth.pug
+++ b/frontend/components/calendar/calendarMonth/calendarMonth.pug
@@ -15,6 +15,14 @@ section.calendar-month
         i.fa.fa-chevron-right(ng-click='cm.next()')
     section.month-body
         table
+            col(width='14.29%')
+            col(width='14.29%')
+            col(width='14.29%')
+            col(width='14.29%')
+            col(width='14.29%')
+            col(width='14.28%')
+            col(width='14.28%')
+            col(width='14.28%')
             tr
                 th  Mon
                 th  Tue
