finish calendar month

--- a/frontend/components/calendar/calendarDaily/calendarDaily.styl
+++ b/frontend/components/calendar/calendarDaily/calendarDaily.styl
@@ -11,7 +11,7 @@
         i
             color #1D8DBF
             font-size 2em
-            &hover
+            &:hover
                 color #260595
 
         .current-day
