--- a/frontend/components/calendar/calendarMonth/calendarMonth.styl
+++ b/frontend/components/calendar/calendarMonth/calendarMonth.styl
@@ -1,3 +1,9 @@
+.day-today
+    background-color #1d8dbf
+
+.different-month
+    color #ADADAD
+
 .calendar-month
     width 80%
     margin-left 10%
@@ -46,10 +52,14 @@
             col(width='14.28')
             tr
                 th
-                    padding 1%
+                    padding 2%
                     border-style solid
                     border-width 1px
                     border-color #808080
                     color #212121
                     background-color #ADADAD
                     text-align center
+                td
+                    padding 1%
+                    border 1px solid #808080
+                    text-align right
