--- a/frontend/components/tasks/tasksTemplate.pug
+++ b/frontend/components/tasks/tasksTemplate.pug
@@ -7,26 +7,26 @@
 		.wrapper_filters
 			ul.row.center-xs
 				li filter by :
-				li name
+				li free task
 				li subtasks left
 				li my tasks
-				li time left
 				li keyword =  
 					input(type="text")
-		.wrapper_task.row.center-xs(ng-repeat = "task in tasksctrl.tasks track by $index" ng-if = "tasksctrl.contentFlag")
+		.werapper_colordescription
+		.wrapper_task.row.center-xs(ng-repeat = "task in tasksctrl.tasks track by $index", ng-if = "tasksctrl.contentFlag" ,   id="{{task._id}}")
 			.col-xs-12.task_header.row.middle-xs.center-xs
-				.task_progress.col-xs-3
+				.task_progress.col-xs-4
 					.content(ng-if = "task.toDos.length") Progress: 
 						.span.countProgress(ng-if = "!task.isFinished") {{task.progress}}/{{task.toDos.length}}
 						.span.countProgress.complete(ng-if = "task.isFinished") Complete!
 				.title.col-xs-5 {{task.title}}
-				.expander.col-xs-3
-					i.fa(aria-hidden = "true", ng-click = "task.expanded = !task.expanded",ng-class="{'fa-arrow-down': !task.expanded, 'fa-arrow-up': task.expanded}")
+				.expander.col-xs-3(ng-class = "{'no_participants': !task.participants.length,'my_task': !!(task.participants | filter: tasksctrl.currUserId).length}")
+					i.fa(aria-hidden = "true", ng-click = "tasksctrl.expand(task)",ng-class="{'fa-arrow-down': !task.expanded, 'fa-arrow-up': task.expanded}")
 			.task_todos.col-xs-12.animate-expand(ng-if="task.expanded")
 				.row.start-xs
 					.task_itemLable.col-xs-offset-1.col-xs-11 Task description:
 					.task_description.col-xs-offset-1.col-xs-10 {{task.description}}
-					.task_itemLable.col-xs-offset-1.col-xs-10 Participants:
+					.task_itemLable.col-xs-offset-1.col-xs-10(ng-if = "task.participants.length") Participants: 
 						.task_Participant(ng-repeat = "user in task.participants track by $index") {{user.firstName}} {{user.lastName || ""}}
 				.toDo.row.start-xs(ng-repeat = "todo in task.toDos track by $index")
 					.col-xs-1.toDo_status
@@ -35,4 +35,4 @@
 					.toDo_description.col-xs-offset-1.col-xs-10 {{todo.description}}
 		.wrapper_noTask.row.center-xs(ng-if = "!tasksctrl.contentFlag")
 			.col-xs-12 No tasks in this project
-		user-list(user-data = `tasksctrl.projUsers`,select-callback = 'tasksctrl.selectUser')
+		//- user-list(user-data = `tasksctrl.projUsers`,select-callback = 'tasksctrl.selectUser')
