--- a/frontend/components/editMessage/editMessage.styl
+++ b/frontend/components/editMessage/editMessage.styl
@@ -1,6 +1,6 @@
 @import "../../../public/libs/css/generalComponentsStyle.styl"
 .post-message-wrapper
-  width 40%
+  width 50%
   border 1px solid #7986CB
   border-radius 10px
   position absolute
@@ -51,11 +51,20 @@
       width 25%
       margin-left 10%
       margin-right 14%
-  .postBtn
-    button()
-    width 20%
-    padding-top 1%
-    padding-bottom 1%
-    margin-left 40%
-    margin-bottom 40px
-    margin-top 50px
+  .sendButtons
+    display flex
+    flex-direction column
+    justify-content center
+    align-self center
+    .postBtn
+      display flex
+      justify-content center
+      align-self center
+      button()
+      width 40%
+      font-size 18px
+      text-align center
+      padding-top 1%
+      padding-bottom 1%
+      margin-bottom 20
+      margin-top 20px
