--- a/frontend/components/postMessage/postMessage.styl
+++ b/frontend/components/postMessage/postMessage.styl
@@ -1,6 +1,6 @@
 @import "../../../public/libs/css/generalComponentsStyle.styl"
 .post-message-wrapper
-    width 40%
+    width 50%
     border 1px solid #7986CB
     border-radius 10px
     position absolute
@@ -20,7 +20,7 @@
         div
             button()
             margin-top 3%
-            width 10%
+            width 30%
         hr
             width 80%
             height 1px
@@ -51,11 +51,16 @@
             width 25%
             margin-left 10%
             margin-right 14%
-    .postBtn
-        button()
-        width 20%
-        padding-top 1%
-        padding-bottom 1%
-        margin-left 40%
-        margin-bottom 40px
-        margin-top 50px
+    .sendBtn
+        display flex
+        justify-content center
+        align-content center
+        button
+            align-self center
+            display flex
+            justify-content center
+            button()
+            padding-top 1%
+            padding-bottom 1%
+            margin-bottom 10px
+            margin-top 20px
