edit icons on events page

--- a/frontend/components/events/eventList.component.pug
+++ b/frontend/components/events/eventList.component.pug
@@ -40,8 +40,7 @@
                                 h2  {{event.title}}  
                             i.fa.fa-folder-open-o.fa-2x
                         .col-xs-2.col-xs-offset-4
-                            i.fa.fa-comment.fa-2x
-                            i.fa.fa-rss.fa-2x
+                            p Place for participants
                     .event-body
                         p(ng-bind-html="event.description")
                 
