--- a/frontend/components/editMessage/editMessage.styl
+++ b/frontend/components/editMessage/editMessage.styl
@@ -68,3 +68,11 @@
       padding-bottom 1%
       margin-bottom 20
       margin-top 20px
+    .delete
+      button()
+      align-self center
+      font-family "Montserrat"
+      background-color #FF5252
+      line-height 50%
+      width 40%
+      font-size 18px
