--- a/frontend/components/events/eventEdit.component.styl
+++ b/frontend/components/events/eventEdit.component.styl
@@ -79,6 +79,8 @@
       button
         font-family "Montserrat"
         button()
+      .deleteButton
+        background-color #FF5252
     i
       color black
 
