--- a/frontend/components/reports/reportsStyle.styl
+++ b/frontend/components/reports/reportsStyle.styl
@@ -91,7 +91,6 @@
             display flex
             align-items center
             justify-content space-around
-            border-bottom 1px solid border-grey
         .generate-item
             position relative
             width -webkit-fit-content
@@ -109,6 +108,7 @@
                 text-indent 1%
                 position absolute
                 left 0
+                top 20%
                 color main-blue
                 display inline-block
                 font-family "FontAwesome"
