--- a/frontend/components/reports/reports.template.pug
+++ b/frontend/components/reports/reports.template.pug
@@ -44,7 +44,7 @@
                                     .col-xs-8.item-title {{r.title}}
                                     .col-xs-4
                                         .row.around-xs
-                                            span.col-xs-5.fa.fa-eye.button.f-btn
+                                            span.col-xs-5.fa.fa-eye.button.f-btn(ng-link = "['Reports Edit', {id: reports.recentReports[$index]._id}]")
                                             span.col-xs-5.fa.fa-trash.button.f-btn
                                 hr
                                 .row.start-xs.item-row(ng-show = "r.participants")
