--- a/frontend/components/checkinsInfo/checkinsInfoStyles.styl
+++ b/frontend/components/checkinsInfo/checkinsInfoStyles.styl
@@ -28,15 +28,31 @@
             color #212121
             margin-left 5px
 
+    .header-btn
+        display flex
+        justify-content space-between
+        margin 15px
+
     .close-btn
         text-align right
         margin-top 5px
         margin-right 10px
 
     .control-btn
-        display flex
-        justify-content space-around
-        margin 15px
+        margin 5px
+
+    .user-list
+        margin 10px
+        padding 10px
+        text-align center
+
+    .avatar
+        bottom 35px
+        margin 3px
+        background-color #f2992e
+        border-radius 5px
+        font-size 23px
+        padding .2em 0.2em
 
     .fa-pencil-square-o
         &:hover
